added menu nailbiter

--- a/header with nav/index.html
+++ b/header with nav/index.html
@@ -5,7 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Flexbox Header</title>
+    <title>Flexbox header with nav</title>
   </head>
-  <body></body>
+  <body>
+    <header class="main-header">
+      <h1 class="logo">
+        <img src="img/logo.svg" width="170" alt="Flexbox Ninja" />
+      </h1>
+
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li class="list-item"><a href="#">About</a></li>
+          <li class="list-item"><a href="#">Customers</a></li>
+          <li class="list-item"><a href="#">Shop</a></li>
+          <li class="list-item"><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
