--- a/menu-nailbiter/index.html
+++ b/menu-nailbiter/index.html
@@ -7,5 +7,10 @@
     <title>Flexbox excersice - Nailbiter Menu</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1 class="logo"></h1>
+      <nav class="navbar"></nav>
+    </header>
+  </body>
 </html>
